--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>FriendSystemNK</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-KR</version>
     <packaging>jar</packaging>
 
     <dependencies>
